# postdamn-server

./: .clang-format  .env  .gitignore  Cargo.toml  LICENSE  Pipfile  README.md  docker-compose.yaml  security.schema.rs
.github/workflows/: tests.yml
catify/: Cargo.toml  dataset.py  main.py
catify/src/: main.rs
migrations/2023-02-14-172546_initial_setup/: up.sql
src/: core.rs  error.rs  lib.rs  main.rs  models.rs  params.rs  schema.rs  services.rs
