[package]
name = "postdamn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "postdamn"
path = "src/main.rs"

[dependencies]
bitmask-enum = "2.1.0"
uuid = { version = "1.2.2", features = ["serde", "fast-rng", "v4", "macro-diagnostics"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
serde = { version = "1.0.152", features = ["derive"] }

diesel = { version = "2.0.2", features = ["postgres", "chrono", "r2d2", "uuid"] }
diesel_ltree = "0.3.0"

axum = { version = "0.6.6", features = ["http2", "macros"] }
validator = { version = "0.16.1", features = ["phone", "derive"] }
problemdetails = { version = "0.2.1", features = ["axum"] }
utoipa = { version = "3.4.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }

tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = "0.7.7"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
diesel-async = { version = "0.3.2", features = ["postgres"] }
