[package]
name = "catify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
error-chain = "0.12.4"
reqwest = "0.11.18"
tch = { version = "0.13.0", features = ["download-libtorch", "cuda-tests"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
